--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="CSS/form.css">
     <link rel="stylesheet" href="CSS/banner.css">
     <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/info.css">
 </head>
 
 <body class="main-bg">
    <header class="header">
     <div>
-        <img class="image" src="./assets/images/pipa.jpg" alt="Logo Pipa fumar Portfolio">
+        <img class="image" src="./assets/images/Hobbit-Logo.jpg" alt="Logo Pipa fumar Portfolio">
 
     </div>
         <nav class="nav">
@@ -60,6 +61,18 @@
         </div>
     </section>
 
+    <section class="info">
+        <h2>Watch everywhere</h2>
+        <p>Stream unlimited movies and TV shows on your,phone ,tablet, laptop and TV.</p>
+        <div class="assets">
+            <img src="./assets/images/dekevin/device-pile.png" alt="">
+            <video autoplay muted loop>
+                <source src="./assets/images/dekevin/video-devices.m4v" type="video/mp4">
+            </video>
+        </div>
+       
+    </section>
+
     <form>
         <div>
             <label></label>
@@ -84,7 +97,7 @@
     </form>
 </main>
 
-    <footer class="footer">
+    <footer class="footer ">
         
         asjdlkfjsadlk
         <!-- <ul>
