--- a/proyectos.html
+++ b/proyectos.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/proyectos.css">
 </head>
 <body>
-    
+    <video class="video" autoplay muted loop>
+        <source src="./assets/images/dekevin/videoplayback.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
