--- a/index.html
+++ b/index.html
@@ -81,25 +81,17 @@
 
     <form>
         <div>
-            <label></label>
-            <input>
+            <label for="mail">Email</label>
+            <input type="email" id="mail" name="" autocomplete="off">  
         </div>
         <div>
-            <label></label>
-            <input>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="">
         </div>
         <div>
-            <label></label>
-            <input>
+            <button>Submit</button>
         </div>
-        <div>
-            <label></label>
-            <input>
-        </div>
-        <div>
-            <label></label>
-            <input>
-        </div>
+       
     </form>
 </main>
 
